[project]
name = "rippler"
description = "An interface to the Ripples drink printer platform"
version = "1.0.0"
authors = [
    { name = "Pierre-Nicolas Durette", email = "pndurette@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.6"
license = { file = "LICENSE.md" }

dependencies = [
    "requests ~= 2.28.0"
]

[project.optional-dependencies]
docs = ["GenDoc ~= 1.0.1"]
dev = ["pytest ~= 7.1.3"]

[project.urls]
homepage = "https://github.com/pndurette/rippler"
documentation = "https://github.com/pndurette/rippler/blob/main/docs/README.md"
repository = "https://github.com/pndurette/rippler"
changelog = "https://github.com/pndurette/rippler/blob/main/CHANGELOG.md"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"